настроил адаптивныый дизайн, при уменьшении ширины элементы ведут себя как резиновые

--- a/index.html
+++ b/index.html
@@ -73,63 +73,66 @@
 	</div>
 	<div class="brand_bar" style="background-color: #ffffff;">
 		<!-- третьи блок соцсетей -->
-		<div class="brand_box1">
-			<h2>Social Media</h2>
-			<div class="brand_box_text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Aenean euismod bibendum laoreet.
+		<div class="wrappers">
+			<div class="brand_box1">
+				<h2>Social Media</h2>
+				<div class="brand_box_text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Aenean euismod bibendum laoreet.
+				</div>
 			</div>
-		</div>
-		<div class="brand_box2">
-			<div class="social_links_element">
-				<a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
-				<a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
-				<a href="#" class="Social_icon" title="Google"><i class="fa-google-plus"></i></a>
-				<a href="#" class="Social_icon" title="Pinterest"><i class="fa-pinterest"></i></a>
-				<a href="#" class="Social_icon" title="Instagram"><i class="fa-instagram"></i></a>
-				<a href="#" class="Social_icon" title="Stumbleupon"><i class="fa-stumbleupon"></i></a>
-				<a href="#" class="Social_icon" title="Rss"><i class="fa-rss"></i></a>
+			<div class="brand_box2">
+				<div class="social_links_element">
+					<a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
+					<a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
+					<a href="#" class="Social_icon" title="Google"><i class="fa-google-plus"></i></a>
+					<a href="#" class="Social_icon" title="Pinterest"><i class="fa-pinterest"></i></a>
+					<a href="#" class="Social_icon" title="Instagram"><i class="fa-instagram"></i></a>
+					<a href="#" class="Social_icon" title="Stumbleupon"><i class="fa-stumbleupon"></i></a>
+					<a href="#" class="Social_icon" title="Rss"><i class="fa-rss"></i></a>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="features">
 		<!-- Четвертиый блок-->
-		<div class="box first">
-			<div class="column">
-				<ul style="list-style-type: none; padding-left: 0px;">
-					<li>
-						<a href="#" class="control tab_1">
-							<P>TAB 1</P>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="control tab_2">
-							<P>TAB 2</P>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="control tab_3">
-							<P>TAB 3</P>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<div class="container">
-				<div class="wrapper_tab_1">
-					<div class="title">
-						<p>Tabs with soft transitioning effect.<p>
-					</div>
-					<div class="text">
-						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-							bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-							justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-							penatibus et magnis dis parturient montes.</p>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-							bibendum laoreet.</p>
-					</div>
+		<div class="wrappers">
+			<div class="box first">
+				<div class="column">
+					<ul style="list-style-type: none; padding-left: 0px;">
+						<li>
+							<a href="#" class="control tab_1">
+								<P>TAB 1</P>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="control tab_2">
+								<P>TAB 2</P>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="control tab_3">
+								<P>TAB 3</P>
+							</a>
+						</li>
+					</ul>
 				</div>
-				<!-- <div class="wrapper_tab_2">
+				<div class="container">
+					<div class="wrapper_tab_1">
+						<div class="title">
+							<p>Tabs with soft transitioning effect.<p>
+						</div>
+						<div class="text">
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+								bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+								justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+								penatibus et magnis dis parturient montes.</p>
+
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+								bibendum laoreet.</p>
+						</div>
+					</div>
+					<!-- <div class="wrapper_tab_2">
 						<div class="title">
 							<p>Tabs #2 with soft transitioning effect.<p>
 						</div>
@@ -143,7 +146,7 @@
 								bibendum laoreet.</p>
 						</div>
 					</div> -->
-				<!-- <div class="wrapper_tab_3">
+					<!-- <div class="wrapper_tab_3">
 						<div class="title">
 							<p>Tabs #3 with soft transitioning effect.<p>
 						</div>
@@ -157,212 +160,214 @@
 								bibendum laoreet.</p>
 						</div>
 					</div> -->
-				<form action="#">
-					<button type="button" class="button_download_features">Download</button>
-				</form>
+					<form action="#">
+						<button type="button" class="button_download_features">Download</button>
+					</form>
+				</div>
 			</div>
-		</div>
-		<div class="box second" style="align-items: center;">
-			<img src="./assets/images/image_city_feature.png" alt="картинка с городом" style="height: 253px" ;>
+			<div class="box second" style="align-self: center; padding-left: 10px;">
+				<img src="./assets/images/image_city_feature.png" alt="картинка с городом" ;>
+			</div>
 		</div>
 	</div>
 	<div class="our_process">
-		<!-- Пятый блок -->
-		<div class="container">
-			<div class="title">
-				WHY THIS IS AWESOME
-			</div>
-			<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
-				<hr width="67px" color="#ff8b38">
-			</div>
-			<div class="title_text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-		</div>
-		<div class="wrapper_box">
-			<div class="container_box">
-				<div class="our_box">
-					<div class="circle"><i class="fa fa-lightbulb-o fa-2x" style="color: #ff8b38;"></i></div>
+		<div class="wrappers">
+			<!-- Пятый блок -->
+			<div class="container">
+				<div class="title">
+					WHY THIS IS AWESOME
 				</div>
-				<div class="box_title">
-					<p>Thoughtful Design</p>
+				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+					<hr width="67px" color="#ff8b38">
 				</div>
-				<div class="box_text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing
-						elit. Aenean euismod bibendum laoreet. Proin gravida
-						dolor sit amet lacus accumsan et viverra.</p>
+				<div class="title_text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 			</div>
-			<div class="container_box">
-				<div class="our_box">
-					<div class="circle"><i class="fa fa-keyboard-o fa-2x" style="color: #ff8b38;"></i></div>
+			<div class="wrapper_box">
+				<div class="container_box">
+					<div class="our_box">
+						<div class="circle"><i class="fa fa-lightbulb-o fa-2x" style="color: #ff8b38;"></i></div>
+					</div>
+					<div class="box_title">
+						<p>Thoughtful Design</p>
+					</div>
+					<div class="box_text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit. Aenean euismod bibendum laoreet. Proin gravida
+							dolor sit amet lacus accumsan et viverra.</p>
+					</div>
 				</div>
-				<div class="box_title">
-					<p>Well Crafted</p>
+				<div class="container_box">
+					<div class="our_box">
+						<div class="circle"><i class="fa fa-keyboard-o fa-2x" style="color: #ff8b38;"></i></div>
+					</div>
+					<div class="box_title">
+						<p>Well Crafted</p>
+					</div>
+					<div class="box_text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit. Aenean euismod bibendum laoreet. Proin gravida
+							dolor sit amet lacus accumsan et viverra.</p>
+					</div>
 				</div>
-				<div class="box_text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing
-						elit. Aenean euismod bibendum laoreet. Proin gravida
-						dolor sit amet lacus accumsan et viverra.</p>
-				</div>
-			</div>
-			<div class="container_box">
-				<div class="our_box">
-					<div class="circle"><i class="fa fa-bolt fa-2x" style="color: #ff8b38;"></i></div>
-				</div>
-				<div class="box_title">
-					<p>Easy to Customize</p>
-				</div>
-				<div class="box_text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing
-						elit. Aenean euismod bibendum laoreet. Proin gravida
-						dolor sit amet lacus accumsan et viverra.</p>
+				<div class="container_box">
+					<div class="our_box">
+						<div class="circle"><i class="fa fa-bolt fa-2x" style="color: #ff8b38;"></i></div>
+					</div>
+					<div class="box_title">
+						<p>Easy to Customize</p>
+					</div>
+					<div class="box_text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit. Aenean euismod bibendum laoreet. Proin gravida
+							dolor sit amet lacus accumsan et viverra.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="pricing">
 		<!-- Шестой блок-->
-		<div class="container">
-			<div class="title">
-				PRICING OPTIONS
+		<div class="wrappers">
+			<div class="container">
+				<div class="title">
+					PRICING OPTIONS
+				</div>
+				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+					<hr width="67px" color="#ff8b38">
+				</div>
+				<div class="title_text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</div>
 			</div>
-			<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
-				<hr width="67px" color="#ff8b38">
-			</div>
-			<div class="title_text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-		</div>
-		<div class="wrapper_box">
-			<div class="box one">
-				<ul style="list-style-type: none; padding-left: 0px;">
-					<li class="basic">
-						Basic
-					</li>
-					<li class="price">
-						<sub style="font-size: 30px;">$</sub>
-						0
-					</li>
-					<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
-						<i>Free for Life</i>
-					</li>
-					<li class="texte_gray">1 gb of space</li>
-					<li class="texte_gray">10 gb of bandwidth</li>
-					<li class="texte_gray">3 websites</li>
-					<li class="texte_gray">Basic Customization</li>
-					<li class="texte_gray">wordpress integration</li>
-					<li class="texte_gray">email support</li>
-				</ul>
-			</div>
-			<div class="box two">
-				<ul style="list-style-type: none; padding-left: 0px;">
-					<li class="basic">
-						Professional
-					</li>
-					<li class="price">
-						<sub style="font-size: 30px;">$</sub>
-						19
-					</li>
-					<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
-						<i>Monthly Payment</i>
-					</li>
-					<li class="texte_gray">OUR MOST POPULAR</li>
-					<li class="texte_gray">5 gb of space</li>
-					<li class="texte_gray">50 gb of bandwidth</li>
-					<li class="texte_gray">12 websites</li>
-					<li class="texte_gray">Advanced Customization</li>
-					<li class="texte_gray">wordpress integration</li>
-					<li class="texte_gray">email support</li>
-				</ul>
-			</div>
-			<div class="box three">
-				<ul style="list-style-type: none; padding-left: 0px;">
-					<li class="basic">
-						Enterprise
-					</li>
-					<li class="price">
-						<sub style="font-size: 30px;">$</sub>
-						70
-					</li>
-					<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
-						<i>Monthly Payment</i>
-					</li>
-					<li class="texte_gray">Unlimited space</li>
-					<li class="texte_gray">Unlimited bandwidth</li>
-					<li class="texte_gray">100 websites</li>
-					<li class="texte_gray">advanced Customization</li>
-					<li class="texte_gray">wordpress integration</li>
-					<li class="texte_gray">24/7 customer support</li>
-				</ul>
+			<div class="wrapper_box">
+				<div class="box one">
+					<ul style="list-style-type: none; padding-left: 0px;">
+						<li class="basic">Basic</li>
+						<li class="price"><sub style="font-size: 30px;">$</sub>0</li>
+						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+							<i>Free for Life</i>
+						</li>
+						<li class="texte_gray">1 gb of space</li>
+						<li class="texte_gray">10 gb of bandwidth</li>
+						<li class="texte_gray">3 websites</li>
+						<li class="texte_gray">Basic Customization</li>
+						<li class="texte_gray">wordpress integration</li>
+						<li class="texte_gray">email support</li>
+					</ul>
+				</div>
+				<div class="box two">
+					<ul style="list-style-type: none; padding-left: 0px;">
+						<li class="basic">
+							Professional
+						</li>
+						<li class="price">
+							<sub style="font-size: 30px;">$</sub>
+							19
+						</li>
+						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+							<i>Monthly Payment</i>
+						</li>
+						<li class="texte_gray">OUR MOST POPULAR</li>
+						<li class="texte_gray">5 gb of space</li>
+						<li class="texte_gray">50 gb of bandwidth</li>
+						<li class="texte_gray">12 websites</li>
+						<li class="texte_gray">Advanced Customization</li>
+						<li class="texte_gray">wordpress integration</li>
+						<li class="texte_gray">email support</li>
+					</ul>
+				</div>
+				<div class="box three">
+					<ul style="list-style-type: none; padding-left: 0px;">
+						<li class="basic">
+							Enterprise
+						</li>
+						<li class="price">
+							<sub style="font-size: 30px;">$</sub>
+							70
+						</li>
+						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+							<i>Monthly Payment</i>
+						</li>
+						<li class="texte_gray">Unlimited space</li>
+						<li class="texte_gray">Unlimited bandwidth</li>
+						<li class="texte_gray">100 websites</li>
+						<li class="texte_gray">advanced Customization</li>
+						<li class="texte_gray">wordpress integration</li>
+						<li class="texte_gray">24/7 customer support</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="testimonials">
 		<!-- Седьмой блок-->
-		<div class="container">
-			<div class="title">
-				WHAT OUR CUSTOMERS ARE SAYING
-			</div>
-			<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
-				<hr width="67px" color="#ff8b38">
-			</div>
-			<div class="title_text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-		</div>
-		<div class="container">
-			<div class="comment">
-				<div class="wrapper_comment">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.<p>
+		<div class="wrappers">
+			<div class="container">
+				<div class="title">
+					WHAT OUR CUSTOMERS ARE SAYING
 				</div>
-				<div class="photo_fio">
-					<div class="wrapper_photo">
-						<img src="./assets/images/avatar_2.png" alt="фото пацана">
-					</div>
-					<div class="fio">
-						<div class="name">Jeremy H.</div>
-						<div class="position">Manager</div>
-					</div>
+				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+					<hr width="67px" color="#ff8b38">
+				</div>
+				<div class="title_text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 			</div>
-			<div class="comment">
-				<div class="wrapper_comment">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.<p>
-				</div>
-				<div class="photo_fio">
-					<div class="wrapper_photo">
-						<img src="./assets/images/avatar_2.png" alt="фото пацана">
+			<div class="container">
+				<div class="comment">
+					<div class="wrapper_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.<p>
 					</div>
-					<div class="fio">
-						<div class="name">John S.</div>
-						<div class="position">Freelancer</div>
+					<div class="photo_fio">
+						<div class="wrapper_photo">
+							<img src="./assets/images/avatar_2.png" alt="фото пацана">
+						</div>
+						<div class="fio">
+							<div class="name">Jeremy H.</div>
+							<div class="position">Manager</div>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="comment">
-				<div class="wrapper_comment">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.<p>
-				</div>
-				<div class="photo_fio">
-					<div class="wrapper_photo">
-						<img src="./assets/images/avatar_2.png" alt="фото пацана">
+				<div class="comment">
+					<div class="wrapper_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.<p>
 					</div>
-					<div class="fio">
-						<div class="name">Suran W.</div>
-						<div class="position">Photographer</div>
+					<div class="photo_fio">
+						<div class="wrapper_photo">
+							<img src="./assets/images/avatar_2.png" alt="фото пацана">
+						</div>
+						<div class="fio">
+							<div class="name">John S.</div>
+							<div class="position">Freelancer</div>
+						</div>
+					</div>
+				</div>
+				<div class="comment">
+					<div class="wrapper_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.<p>
+					</div>
+					<div class="photo_fio">
+						<div class="wrapper_photo">
+							<img src="./assets/images/avatar_2.png" alt="фото пацана">
+						</div>
+						<div class="fio">
+							<div class="name">Suran W.</div>
+							<div class="position">Photographer</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -374,7 +379,7 @@
 			<div class="title">
 				STYLISH AXURE DESIGN
 			</div>
-			<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
+			<div class="hr" style="padding: 22px 0px 0px; display: flex; justify-content: center;">
 				<hr width="67px" color="#ffffff">
 			</div>
 			<div class="title_text">
@@ -387,17 +392,17 @@
 	</div>
 	<div class="contact">
 		<div class="container">
-			<div class="contact__header"></div>
-			<div class="title">
-				CONTACT US
+			<div class="contact__header">
+				<div class="title">
+					CONTACT US
+				</div>
+				<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
+					<hr width="67px" color="orange">
+				</div>
+				<div class="title_text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+				</div>
 			</div>
-			<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
-				<hr width="67px" color="orange">
-			</div>
-			<div class="title_text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-			</div>
-
 			<div class="contact__items">
 				<form class="contact_items-name">
 					<input type="text" class="contact_input_name" placeholder="Name">
@@ -418,7 +423,7 @@
 	</div>
 	<div class="footer">
 		<div class="container">
-			<div class="footer__icon">
+			<div class="footer__icon" style="width: 320px; margin-top: 30px;">
 				<div class="social_links_element">
 					<a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
 					<a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
@@ -431,7 +436,7 @@
 			</div>
 			<div class="footer__2015">
 				<p>
-					(C) 2015 Axure Themers
+					© 2015 Axure Themers
 				</p>
 			</div>
 		</div>
