сделал макет под пиксельперфек

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="box first">
 				<div class="column">
 					<ul style="list-style-type: none; padding-left: 0px;">
-						<li>
+						<li style="margin-bottom: -3px;">
 							<a href="#" class="control tab_1">
 								<P>TAB 1</P>
 							</a>
@@ -177,7 +177,7 @@
 				<div class="title">
 					WHY THIS IS AWESOME
 				</div>
-				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+				<div class="hr" style="padding: 14px 0px 3px; display: flex; justify-content: center;">
 					<hr width="67px" color="#ff8b38">
 				</div>
 				<div class="title_text">
@@ -234,8 +234,8 @@
 				<div class="title">
 					PRICING OPTIONS
 				</div>
-				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
-					<hr width="67px" color="#ff8b38">
+				<div class="hr" style="padding: 14px 0px 4px; display: flex; justify-content: center;">
+					<hr width="60px" color="#ff8b38">
 				</div>
 				<div class="title_text">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -245,7 +245,7 @@
 				<div class="box one">
 					<ul style="list-style-type: none; padding-left: 0px;">
 						<li class="basic">Basic</li>
-						<li class="price"><sub style="font-size: 30px;">$</sub>0</li>
+						<li class="price"><span>$</span>0</li>
 						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
 							<i>Free for Life</i>
 						</li>
@@ -259,12 +259,10 @@
 				</div>
 				<div class="box two">
 					<ul style="list-style-type: none; padding-left: 0px;">
-						<li class="basic">
+						<li class="basic second">
 							Professional
 						</li>
-						<li class="price">
-							<sub style="font-size: 30px;">$</sub>
-							19
+						<li class="price"><span>$</span>19
 						</li>
 						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
 							<i>Monthly Payment</i>
@@ -284,7 +282,7 @@
 							Enterprise
 						</li>
 						<li class="price">
-							<sub style="font-size: 30px;">$</sub>
+							<span>$</span>
 							70
 						</li>
 						<li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
@@ -308,7 +306,7 @@
 				<div class="title">
 					WHAT OUR CUSTOMERS ARE SAYING
 				</div>
-				<div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+				<div class="hr" style="padding: 14px 0px 3px;; display: flex; justify-content: center;">
 					<hr width="67px" color="#ff8b38">
 				</div>
 				<div class="title_text">
@@ -329,7 +327,7 @@
 							<img src="./assets/images/avatar_2.png" alt="фото пацана">
 						</div>
 						<div class="fio">
-							<div class="name">Jeremy H.</div>
+							<div class="name"><p>Jeremy H.</p></div>
 							<div class="position">Manager</div>
 						</div>
 					</div>
@@ -347,7 +345,7 @@
 							<img src="./assets/images/avatar_2.png" alt="фото пацана">
 						</div>
 						<div class="fio">
-							<div class="name">John S.</div>
+							<div class="name"><p>John S.</p></div>
 							<div class="position">Freelancer</div>
 						</div>
 					</div>
@@ -365,7 +363,7 @@
 							<img src="./assets/images/avatar_2.png" alt="фото пацана">
 						</div>
 						<div class="fio">
-							<div class="name">Suran W.</div>
+							<div class="name"><p>Suran W.</p></div>
 							<div class="position">Photographer</div>
 						</div>
 					</div>
@@ -379,7 +377,7 @@
 			<div class="title">
 				STYLISH AXURE DESIGN
 			</div>
-			<div class="hr" style="padding: 22px 0px 0px; display: flex; justify-content: center;">
+			<div class="hr" style="padding: 14px 0px 5px; display: flex; justify-content: center;">
 				<hr width="67px" color="#ffffff">
 			</div>
 			<div class="title_text">
@@ -396,7 +394,7 @@
 				<div class="title">
 					CONTACT US
 				</div>
-				<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
+				<div class="hr" style="padding: 14px 0px 4px; display: flex; justify-content: center;">
 					<hr width="67px" color="orange">
 				</div>
 				<div class="title_text">
@@ -411,7 +409,7 @@
 				</form>
 				<div class="contact_items_message">
 					<p>Message</p>
-					<textarea class="contact__items_comment" name="comment"></textarea></p>
+					<textarea class="contact__items_comment" name="comment"></textarea>
 				</div>
 			</div>
 			<div class="contact__btn">
@@ -423,7 +421,7 @@
 	</div>
 	<div class="footer">
 		<div class="container">
-			<div class="footer__icon" style="width: 320px; margin-top: 30px;">
+			<div class="footer__icon" style="width: 318px; margin-top: 40px;">
 				<div class="social_links_element">
 					<a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
 					<a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
